--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = skeleton
+name = license_copyright_pipeline
 license = Apache-2.0
 
 # description must be on ONE line https://github.com/pypa/setuptools/issues/1390
@@ -57,3 +57,8 @@ docs =
     Sphinx >= 3.3.1
     sphinx-rtd-theme >= 0.5.0
     doc8 >= 0.8.1
+
+
+[options.entry_points]
+scancodeio_pipelines =
+    license_copyright = license_copyright:LicenseCopyrightPipeline
