Update link references of ownership from nexB to aboutcode-org
Signed-off-by: Chin Yeung Li <tli@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ license = Apache-2.0
 description = skeleton
 long_description = file:README.rst
 long_description_content_type = text/x-rst
-url = https://github.com/nexB/skeleton
+url = https://github.com/aboutcode-org/skeleton
 
 author = nexB. Inc. and others
 author_email = info@aboutcode.org
